# pretix-visma-pay

./: .gitignore  .update-locales.sh  LICENSE  MANIFEST.in  Makefile  README.md  pretixplugin.toml  pyproject.toml  setup.cfg
.github/workflows/: style.yml  tests.yml
pretix_visma_pay/: apps.py  forms.py  helpers.py  payment.py  signals.py  urls.py  views.py  visma_pay.py
pretix_visma_pay/locale/: django.pot
pretix_visma_pay/locale/de/LC_MESSAGES/: django.po
pretix_visma_pay/locale/de_Informal/LC_MESSAGES/: django.po
pretix_visma_pay/locale/en/LC_MESSAGES/: django.po
pretix_visma_pay/locale/fi/LC_MESSAGES/: django.po
pretix_visma_pay/templates/pretix_visma_pay/: control.html  payment_form.html
